--- a/src/components/InfoSection.astro
+++ b/src/components/InfoSection.astro
@@ -2,7 +2,7 @@
 // Компонент информационного блока с ссылками на важные страницы
 ---
 
-<section class="py-12 xs:py-16 sm:py-20 md:py-24 lg:py-28 bg-gradient-to-br from-gray-900 via-gray-800 to-black relative overflow-hidden">
+<section class="py-12 xs:py-16 sm:py-20 md:py-24 lg:py-28 relative overflow-hidden">
   <!-- Декоративные элементы -->
   <div class="absolute inset-0 opacity-5">
     <div class="absolute top-10 xs:top-12 sm:top-16 md:top-20 left-10 xs:left-12 sm:left-16 md:left-20 w-20 xs:w-24 sm:w-28 md:w-32 h-20 xs:h-24 sm:h-28 md:h-32 bg-yellow-500 rounded-full blur-3xl"></div>
