--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,15 +2,19 @@
 import Layout from "../layouts/Layout.astro";
 import Hero from "../components/Hero.astro";
 import About from "../components/About.astro";
-import Products from "../components/Products.astro";
 import Documents from "../components/Documents.astro";
 import InfoSection from "../components/InfoSection.astro";
+import TrustSection from "../components/TrustSection.astro";
+import InlineLeadSection from "../components/InlineLeadSection.astro";
+import ProductPromoBanner from "../components/ProductPromoBanner.astro";
 ---
 
 <Layout>
   <Hero />
   <About />
-  <Products />
+  <ProductPromoBanner />
+  <InlineLeadSection />
   <InfoSection />
+  <TrustSection />
   <Documents />
 </Layout>
