--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import Header from "../components/Header.astro";
 import Up from "../components/Up.astro";
 import Footer from "../components/Footer.astro";
 import FloatingFAQ from "../components/FloatingFAQ.astro";
+import StickyCTA from "../components/StickyCTA.astro";
 import Analytics from "../components/Analytics.astro";
 import "../styles/tailwind.css";
 
@@ -120,9 +121,9 @@ const allKeywords = `${commonKeywords}, ${silverKeywords}, ${goldKeywords}`;
 
     <slot name="head" />
   </head>
-  <body class="bg-gradient-to-br from-gray-900 via-gray-800 to-black text-white">
+  <body class="bg-[#090B12] text-white">
     <!-- Загрузчик страницы -->
-    <div id="page-loader" class="fixed inset-0 bg-gradient-to-br from-gray-900 via-gray-800 to-black z-50 flex items-center justify-center">
+    <div id="page-loader" class="fixed inset-0 bg-[#090B12] z-50 flex items-center justify-center">
       <div class="text-center">
         <!-- Логотип -->
         <div class="mb-8">
@@ -167,6 +168,7 @@ const allKeywords = `${commonKeywords}, ${silverKeywords}, ${goldKeywords}`;
       <Header />
       <slot />
       <FloatingFAQ />
+      <StickyCTA />
       <Up />
       <Footer />
     </div>
